# arc-25

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml  deploy-code-to-kaggle.yaml  deploy-data-to-kaggle.yaml  deploy-to-kaggle.yaml  docker-build.yml  unit-tests.yaml
data/: README.md  all-challenges.cbor.xz  harc-rule-descr.cbor.xz  known-good-solutions.txt  re-arc.cbor.xz
data/models/: 20251023-1137-vertex-ai-mae-tiny-4xL4-chkp-006912.msgpack.xz  20251025-1452-vertex-ai-mae-small-4xL4-chkp-004096.msgpack.xz  20251031-1133-vertex-ai-arc-solver-small-4xv6e-chkp-000768.msgpack.xz
data/repack/: larc-human.cbor.xz
data/solutions/: 00576224.py  00576224.txt  007bbfb7.txt  009d5c81.txt  00d62c1b.txt  00dbd492.txt  017c7c7b.py  36fdfd69.py  3af2c5a8.py  3af2c5a8.txt  4612dd53.py  4612dd53.txt  46442a0e.py  54d82841.py  5614dbcf.py  5614dbcf.txt  58743b76.txt  642d658d.py  642d658d.txt  6e19193c.py  6f8cd79b.py  72322fa7.py  72322fa7.txt  7b6016b9.txt  7bb29440.py  7bb29440.txt  8eb1be9a.py  8eb1be9a.txt  9172f3a0.txt  97999447.py  9841fdad.py  9f5f939b.py  9f5f939b.txt  a740d043.py  a740d043.txt  ad3b40cf.txt  b782dc8a.py  b782dc8a.txt  bf699163.py  bf699163.txt  (+37 more)
doc/: performance-notes.md  plan.md  todo.md
docker/: .dockerignore  Dockerfile  Dockerfile.base  build.sh  vertex-ai-workbench.dockerfile
docs/: performance-notes.md  plan.md
docs/figures/: field-transformer.typ
notebooks/: ARC Vision 2 Classification.ipynb  ARC Vision 2 MAE.ipynb  ARC Vision 2.ipynb  ARC Vision Submission Notebook.ipynb  ARC Vision v2 Theory.ipynb  ARC Vision.ipynb  Combine datasets.ipynb  DSL.ipynb  Evaluate Checkpoints.ipynb  Evaluate Submission.ipynb  Gemma Experiments.ipynb  Prompts.ipynb  Synthetic.ipynb  Test DSL.ipynb  Test Orbax.ipynb  Train ARC Solver.ipynb  Untitled.ipynb  arc-agi-2-hf.ipynb  arc-agi-2.ipynb
references/: datasets.md
scripts/: version.py  vertex-ai-training.py
src/arc25/: __init__.py  _version.py  augment.py  dataset.py  deploy.py  facts.py  kaggle.py  prompts.py  sandbox.py  serialisation.py  symmetry.py  tools.py
src/arc25/dsl/: api.py  paths.py  primitives.py  types.py
src/arc25/explorer/: main.py
src/arc25/hf/: sft.py
src/arc25/lib/: attrs.py  click_tools.py  compat.py  misc.py  nnx_compat.py
src/arc25/submission/: transductive.py
src/arc25/synth/: base.py  tiny.py
src/arc25/tests/: test_importing.py  test_prompts.py  test_solutions.py  test_symmetry.py  test_synth.py  test_vision1.py  test_vision2.py
src/arc25/tests/vision2/: __init__.py  conftest.py  test_arc_solver.py  test_attention.py  test_classification.py  test_encoder.py  test_layernorm.py  test_linear.py  test_mae.py  test_saving.py  test_transformer.py
src/arc25/training/: arc_solver.py  base.py  cli.py  config.py  dataset.py  gcp.py  knn_eval.py  learning_rate.py  linear_probe.py  mae.py  row_weighted_adam.py  saving.py
src/arc25/vision/: attention.py  classification.py  encoder.py  fields.py  flavours.py  flavours_minimal.py  linear.py  rope.py  symrep.py  transformer.py
src/arc25/vision1/: attention.py  classification.py  linear.py  symrep.py
src/arc25/vision2/: arc_solver.py  attention.py  classification.py  encoder.py  fields.py  layernorm.py  linear.py  mae.py  swiglu.py  symrep.py  transformer.py
