
[project]
name = "yde-arc25"
description = "Yves' attempt to beat the ARC Prize 2025"
readme = "README.md"
version = "25.8.1"
authors = [
    {name = "Yves Delley", email = "pu.y@delley.net"},
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "nicegui",
    "attrs",
    "anyio",
    "matplotlib",
    "platformdirs>=4.3.8",
    "pyyaml>=6.0.2",
    "watchfiles>=1.1.0",
    "scipy>=1.16.1",
    "msgpack>=1.1.1",
    "cbor2>=5.7.0",
]

[project.optional-dependencies]
native = ["pywebview"]

[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio>=1.1.0",
]
build-explorer = [
    "pyinstaller>=6.10",
    "pillow",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"
known_first_party = "arc25"

[tool.flake8]
max-line-length = 120
extend-select = "B950"
extend-ignore = "E203,E501,E701,E731,F401,F403,F405"
exclude = "app/main.py"

[tool.pdm]
package-dir = "src"

[tool.pdm.build]
includes = ["src/arc25"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
