
[project]
name = "yde-arc25"
description = "Yves' attempt to beat the ARC Prize 2025"
readme = "README.md"
version = "25.8.1"
authors = [
    {name = "Yves Delley", email = "pu.y@delley.net"},
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "attrs",
    "anyio",
    "matplotlib",
    "pyyaml>=6.0.2",
    "scipy>=1.15.3",
    "msgpack>=1.1.1",
    "cbor2>=5.7.0",
]

[project.optional-dependencies]
explorer = [
    "nicegui",
    "watchfiles>=1.1.0",
    "platformdirs>=4.3.8",
]
huggingface = [
    "peft",
    "bitsandbytes; sys_platform == 'linux'",
    "transformers>=4.55.0",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio>=1.1.0",
]
build-explorer = [
    "pyinstaller>=6.10",
    "pillow",
]
kaggle = [
    "kaggle>=1.7.4.5",
    "asyncclick>=8.2.2.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"
known_first_party = "arc25"

[tool.flake8]
max-line-length = 120
extend-select = "B950"
extend-ignore = "E203,E501,E701,E731,F401,F403,F405"
exclude = "app/main.py"

[tool.pdm]
package-dir = "src"

[tool.pdm.build]
includes = ["src/arc25"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
