
[project]
name = "yde-arc25"
description = "Yves' attempt to beat the ARC Prize 2025"
readme = "README.md"
dynamic = ["version"]
authors = [
    {name = "Yves Delley", email = "pu.y@delley.net"},
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "attrs",
    "anyio",
    "matplotlib",
    "pyyaml>=6.0.2",
    "scipy>=1.15.3",
    "msgpack>=1.1.1",
    "cbor2>=5.7.0",
]

[project.optional-dependencies]
explorer = [
    "nicegui",
    "watchfiles>=1.1.0",
    "platformdirs>=4.3.8",
]
huggingface = [
    "peft",
    "bitsandbytes; sys_platform == 'linux'",
    "transformers>=4.55.0",
]
vision = [
    "jax>=0.7.2",
    "flax>=0.12",
    "jaxtyping",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio>=1.1.0",
]
kaggle = [
    "kaggle>=1.7.4.5",
    "asyncclick>=8.2.2.2",
]

[build-system]
requires = ["pdm-backend>=2.4"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"
known_first_party = "arc25"

[tool.flake8]
max-line-length = 120
extend-select = "B950"
# F541: f-string is missing placeholders - putting and f before a string and forgetting to include placeholder is usually not a bug, but just consistency
# F722: syntax error in forward annotation - clashes with jaxtyping
# B023: Function definition does not bind loop variable - we use local functions all the time; that's fine as long as they aren't leaked out of the loop
extend-ignore = "E203,E501,E701,E731,F401,F403,F405,F541,F722,B023"
exclude = "app/main.py"

[tool.pdm]
package-dir = "src"
distribution = true

[tool.pdm.version]
source = "scm"                 # read from Git/Hg tags
write_to = "arc25/_version.py"
write_template = "__version__ = '{}'"
# Optional: customize output (needs pdm-backend>=2.4):
version_format = "scripts.version:format_version"

[tool.pdm.resolution]
# tensorstore is currently unavailable on python 3.14
excludes = ["tensorstore"]

[tool.pdm.resolution.overrides]
# override to use upstream branch https://github.com/google/flax/compare/fix-py314-kw-only-dataclasses
# allowing us to test on python 3.14.
flax = "git+https://github.com/google/flax.git@6622efcf2782de71b89e62b2943f526c82bd2f74"

[tool.pdm.build]
includes = ["src/arc25"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
filterwarnings = ["error"]
